--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body{
     position: absolute;
 }
 .header{
-    position: fixed;
+    position: sticky;
     top: 0;
     color: white;
     z-index: 1;
